force-app/main/default/objects/Hardware_Detail__c/Hardware_Detail__c.object-meta.xml
<CustomObject>
    <description>Details of various hardware assets.</description>
    <label>Hardware Detail</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hardware Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>