force-app/main/default/objects/Hardware_Detail__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <description>Master detail relationship with asset object.</description>
    <label>Asset Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Assets_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>