force-app/main/default/objects/Hardware_Detail__c/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Agreement</label>
    <referenceTo>Contract_Agreement__c</referenceTo>
    <relationshipLabel>Hardware Details</relationshipLabel>
    <relationshipName>Hardware_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>