force-app/main/default/objects/Hardware_Detail__c/fields/Is_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if an Asset is assigned to a user or not.</description>
    <label>Is Assigned?</label>
    <type>Checkbox</type>
</CustomField>