force-app/main/default/objects/Hardware_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Shows current status of the asset.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Pending Imagining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>