force-app/main/default/objects/Hardware_Detail__c/recordTypes/Hardware.recordType-meta.xml
<RecordType>
    <fullName>Hardware</fullName>
    <active>true</active>
    <description>For Hardware assets.</description>
    <label>Hardware</label>
</RecordType>