force-app/main/default/objects/Hardware_Detail__c/validationRules/Serial_Number_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_Validation_Rule</fullName>
    <active>true</active>
    <description>Serial Number should be Unique.</description>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Hardware_Detail__c.Fields.Name , 
        $ObjectType.Hardware_Detail__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Entry for this Hardware Asset already exist, please enter correct Serial Number,</errorMessage>
</ValidationRule>