force-app/main/default/objects/Hardware_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Contract_Agreement__c</columns>
    <columns>Is_Assigned__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>