force-app/main/default/objects/Hardware_Detail__c/listViews/Expired_Hardware_Asset.listView-meta.xml
<ListView>
    <fullName>Expired_Hardware_Asset</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>End of Life</value>
    </filters>
    <label>Expired Hardware Asset</label>
</ListView>