force-app/main/default/objects/Hardware_Detail__c/listViews/List_of_deployed_hardware_asset.listView-meta.xml
<ListView>
    <fullName>List_of_deployed_hardware_asset</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <label>Deployed Hardware Asset</label>
</ListView>