force-app/main/default/objects/Hardware_Detail__c/listViews/List_of_Pending_Reimaging_Hardware_Asset.listView-meta.xml
<ListView>
    <fullName>List_of_Pending_Reimaging_Hardware_Asset</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Imagining</value>
    </filters>
    <label>Pending Reimaging Hardware Asset</label>
</ListView>